fixed error of chat button invisible.

--- a/sportscast/public/stylesheets/watch_p.css
+++ b/sportscast/public/stylesheets/watch_p.css
@@ -225,7 +225,7 @@
 		overflow: auto;
 	}
 	#chat-open-button{
-		background-color: #aaa;
+		background-color: #ddd;
 		position: fixed;
 		bottom: 0px;
 		left: 14px;
